--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link rel="stylesheet"
+  href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,6 +17,7 @@
  -->
  <div class="hero">
  	<nav>
+ 		
  		<h2 class="logo">Portfo<span>lio</span></h2>
  		<ul>
  			<li><a href="#">Home</a></li>
@@ -24,6 +27,8 @@
  			<li><a href="#">Contact Us</a></li>
   		</ul>
   		<a href="#" class="btn">Subscibe</a>
+  		<!-- <i class="fa-sharp fa-solid fa-bars"></i> -->
+  		<div class="bx bx-menu" id="menu-icon"></div>	
   	</nav>
 
   	<div class="content">
@@ -113,6 +118,6 @@
 		</div>
 		<p class="end">CopyRight by Duncan Libong</p>
 	</footer>
-
+<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
